[project]
name = "tds-project-2-ai-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.7.2",
    "fastapi>=0.116.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pydantic-ai[logfire]>=0.6.0",
    "pypdf2>=3.0.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
]
