[project]
name = "tds-project-2-ai-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.7.3",
    "duckdb>=1.3.2",
    "fastapi>=0.116.1",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "google-genai>=1.30.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "uvicorn>=0.35.0",
]
